Fix error in email editor overflowing
[MAILPOET-3276]

--- a/assets/css/src/components-editor/_common.scss
+++ b/assets/css/src/components-editor/_common.scss
@@ -99,6 +99,7 @@ input.mailpoet_option_offset_left_small {
 }
 
 .mailpoet_editor_messages {
+  font-size: $font-size-small;
   position: absolute;
   right: 0;
   top: 100%;
